--- a/One_Page_Website/CSS/one_page_website.css
+++ b/One_Page_Website/CSS/one_page_website.css
@@ -1,112 +1,248 @@
-/*-----------------------------
+/*-----------------------
     GENERIC STYLING
------------------------------*/
+------------------------*/
+html {
+    box-sizing: border-box;
+}
+  
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+  
 body {
-    font-family: "Helvetica", sans-serif, serif;
-    font-size: 16px
+    margin: 20px;
 }
 
-section {
-    padding-top: 50px;
-    margin-top: 50px;
-}
-
-.container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-/*--------------------------
-    GALLERY STYLING
---------------------------*/
-.flex-container {
-    display: -webkit-flex;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 10px;
-    border: 3px solid red;
-    border-radius: 7px;
-    margin: 0px auto;
-}
-
-.photo {
-    position: relative; 
-    line-height: 0;
-    margin-bottom: 2em;
-    overflow: hidden;
-    border-radius: 8px;
-    padding: 1px;
-    border: 1px solid #000000;
-    background-color: red;
-}
-
-.photo-container {
-    text-align: center;
-    margin: 15px auto;
-    width: 350px;
-    height: 300px;
-}
-
-.photo-container img {
-    max-width: 100%;
-    width: 350px;
-    height: 300px;
-}
-
-.photo-overlay {
-    color: #fff;
-    position: absolute;
+/*---------------
+    NAVIGATION
+----------------*/
+#nav {
+    display: inline-block;
+    position: fixed;
     top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding-left: 20px;
-    padding-right: 20px;
-    justify-content: center; /* For centering text inside .photo-overlay */
+    text-align: center;
+}
+
+/*-----------------
+    HOME STYLING
+------------------*/
+#home {
+    width: 100%;
+    text-align: center;
+}
+
+/*---------------
+    GALLERY
+---------------*/
+#gallery.container {
+    display: flex;
+    justify-content: center;
     align-items: center;
-    background: rgba(0, 0, 0, 0.5);
 }
 
-.white-head {
-    color: #C9BDAA;
-    margin-top: 5%;
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around, space-between, space-evenly;
+    width: 100%;
+    height: 100%;
 }
 
-/*---------------------------------
-    PHOTO OVERLAY TRANSITIONS
----------------------------------*/
-.photo-overlay {
-    opacity: 0;
-    transition: opacity .5s;
-    border-radius: 10px;
+.row > .column {
+    padding: 2%;
+}
+
+.column {
+    float: left;
+    width: 25%;
+}
+
+/*--------------------
+    MODAL/LIGHTBOX
+---------------------*/
+/* STYLES FOR LIGHTBOX CONTAINER */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 10 62px 10px 62px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(14, 13, 13);
+    overflow: auto;
+}
+  
+/* STYLES FOR MODAL CONTENT */
+.modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding: 0 0 0 0;
+    width: 80%;
+    max-width: 1200px;
+    background-color: #00000073;
+}
+
+.modal-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+}
+
+.modal_row > .modal_column {
+    padding: 5px;
+}
+
+.modal_column {
+    float: left;
+    width: 25%;
+}
+  
+/* HIDE SLIDES */
+.mySlides {
+    display: none;
+}
+
+/* IMAGE STYLING */
+img.demo {
+    width: 100%;
+    opacity: 0.6; 
+}
+
+img.active,
+img.demo:hover {
+    opacity: 1;
+  }
+  
+img.hover {
+    transition: 0.3s;
+}
+  
+.hover-shadow:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* CLOSE BUTTON */
+.close {
+    color: white;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #999;
+    text-decoration: none;
     cursor: pointer;
 }
 
-.photo-overlay:hover {
-    opacity: 1;
+/*NEXT & PREVIOUS BUTTONS */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
-.photo img {
-    transition: transform .5s;
-    transform-origin: 50% 50%;
+.prev {
+    left: 0;
+}
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
 }
 
-.photo:hover img {
-    transform: scale(1.1);
+/* NEXT & PREVIOUS HOVER */
+.prev:hover,
+.next:hover {
+    background-color: rgba(145, 145, 145, 0.8);
 }
 
-/*---------------------------
+/* SLIDE NUMBER TEXT */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* CAPTION TEXT */
+.caption-container {
+    text-align: center;
+    background-color: black;
+    padding: 2px 16px;
+    color: white;
+  }
+
+/*---------------------
+    SUCCESS STYLING
+----------------------*/
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    margin: 10px 10px 20px 10px;
+}
+
+#success {
+    width: 50%;
+    float: left;
+    text-align: left;
+}
+
+.video-container {
+    width:100%;
+}
+
+iframe {
+    width: 90%;
+}
+/*-------------------
     FORM STYLING
----------------------------*/
+--------------------*/
 #apply {
-
+    width: 50%;
+    float: left;
+    text-align: left;
 }
-
-.apply {
-    width: 150px;
+.input {
+    width: 100px;
     margin: 3px;
     border: 1px solid red;
-    border-radius: 5px
+    border-radius: 5px;
+    z-index: 0;
+}
+
+/*---------------------
+    FOOTER STYLING
+---------------------*/
+footer {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    padding-top: 20px;
 }
